--- a/Day1/2_custom_types.ipynb
+++ b/Day1/2_custom_types.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining data types"
+    "# Custom Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining data types"
    ]
   },
   {
@@ -350,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom constructor"
+    "## Example: Diagonal Matrix"
    ]
   },
   {
@@ -359,8 +366,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "struct VolNaive\n",
-    "    value::Float64\n",
+    "struct DiagonalMat\n",
+    "    diag::Vector{Float64}\n",
     "end"
    ]
   },
@@ -370,135 +377,263 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VolNaive(3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolNaive(-3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "struct VolSimple\n",
-    "    value::Float64\n",
-    "    \n",
-    "    function VolSimple(x) # inner constructor. function name must match the type name.\n",
-    "        if !(x isa Real)\n",
-    "            throw(ArgumentError(\"Must be real\"))\n",
-    "        end\n",
-    "        if x < 0\n",
-    "            throw(ArgumentError(\"Negative volume not allowed.\"))\n",
-    "        end\n",
-    "        new(x) # within an inner constructor, the `new` function can be used to create an object.\n",
-    "    end\n",
-    "end"
+    "DiagonalMat([1.2,4.3,5.0])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "### Arithmetic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Base: +, -, *, /\n",
     "\n",
-    "**Side note:**\n",
+    "+(Da::DiagonalMat, Db::DiagonalMat) = DiagonalMat(Da.diag + Db.diag)\n",
+    "-(Da::DiagonalMat, Db::DiagonalMat) = DiagonalMat(Da.diag - Db.diag)\n",
+    "*(Da::DiagonalMat, Db::DiagonalMat) = DiagonalMat(Da.diag .* Db.diag)\n",
+    "/(Da::DiagonalMat, Db::DiagonalMat) = DiagonalMat(Da.diag ./ Db.diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 = DiagonalMat([1,2,3])\n",
+    "D2 = DiagonalMat([2.4,1.9,5.7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 + D2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 - D2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 * D2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 / D2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arithmetics involving other types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number\n",
+    "*(x::Number, D::DiagonalMat) = DiagonalMat(x * D.diag)\n",
+    "*(D::DiagonalMat, x::Number) = DiagonalMat(D.diag * x)\n",
+    "/(D::DiagonalMat, x::Number) = DiagonalMat(D.diag / x)\n",
     "\n",
-    "```julia\n",
-    "if !(x isa Real)\n",
-    "    throw(ArgumentError(\"Must be real\"))\n",
+    "# Vector\n",
+    "*(D::DiagonalMat, V::AbstractVector) = D.diag .* V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D1 * rand(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that some functions already work for our `DiagonalMat`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum([D1, D2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameterization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DiagonalMat([1,2,3]) # implicit conversion to Vector{Float64}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DiagonalMat([1+3im, 4-2im, im])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DiagonalMat([\"Why\", \"not\", \"support\", \"strings?\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can easily relax our type definition to allow all sorts of internal value types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct DiagonalMatParam{T, V<:AbstractVector{T}}\n",
+    "    diag::V\n",
     "end\n",
-    "if x < 0\n",
-    "    throw(ArgumentError(\"Negative volume not allowed.\"))\n",
+    "\n",
+    "# copied from above\n",
+    "import Base: +, -, *, /\n",
+    "+(Da::DiagonalMatParam, Db::DiagonalMatParam) = DiagonalMatParam(Da.diag + Db.diag)\n",
+    "-(Da::DiagonalMatParam, Db::DiagonalMatParam) = DiagonalMatParam(Da.diag - Db.diag)\n",
+    "*(Da::DiagonalMatParam, Db::DiagonalMatParam) = DiagonalMatParam(Da.diag .* Db.diag)\n",
+    "/(Da::DiagonalMatParam, Db::DiagonalMatParam) = DiagonalMatParam(Da.diag ./ Db.diag)\n",
+    "# Number\n",
+    "*(x::Number, D::DiagonalMatParam) = DiagonalMatParam(x * D.diag)\n",
+    "*(D::DiagonalMatParam, x::Number) = DiagonalMatParam(D.diag * x)\n",
+    "/(D::DiagonalMatParam, x::Number) = DiagonalMatParam(D.diag / x)\n",
+    "# Vector\n",
+    "*(D::DiagonalMatParam, V::AbstractVector) = D.diag .* V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DiagonalMatParam([1+3im, 4-2im, im])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DiagonalMatParam([\"This \", \"just \"]) * DiagonalMatParam([\"should\", \"work!\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `AbstractArray` interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's integrate our diagonal matrix into Julia's type hierarchy by subtyping `AbstractMatrix`. Of course, we should then also implement the [`AbstractArray` interface](https://docs.julialang.org/en/latest/manual/interfaces/#man-interface-array-1)!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struct DiagonalMatrix{T, V<:AbstractVector{T}} <: AbstractMatrix{T}\n",
+    "    diag::V\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement AbstractArray interface\n",
+    "Base.size(D::DiagonalMatrix) = (length(D.diag), length(D.diag))\n",
+    "function Base.getindex(D::DiagonalMatrix{T,V}, i::Int, j::Int) where {T,V}\n",
+    "    if i == j\n",
+    "        r = D.diag[i]\n",
+    "    else\n",
+    "        r = zero(T)\n",
+    "    end\n",
+    "    r\n",
     "end\n",
-    "```\n",
-    "\n",
-    "This can be written more compactly as\n",
-    "```julia\n",
-    "x isa Real || throw(ArgumentError(\"Must be real\"))\n",
-    "x < 0 && throw(ArgumentError(\"Negative volume not allowed.\"))\n",
-    "```\n",
-    "\n",
-    "See [\"short-circuit evaluation\"](https://docs.julialang.org/en/latest/manual/control-flow/#Short-Circuit-Evaluation-1) for more information.\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolSimple(3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolSimple(-3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolSimple(\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolSimple(3) # implicit conversion from Int64 -> Float64"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Parametric types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Volumes don't have to be `Float64` values. We can easily relax our type definition to allow all sorts of internal value types."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "struct VolParam{T}\n",
-    "    value::T\n",
-    "    \n",
-    "    function VolParam(x::T) where T # x can be of any type T\n",
-    "        if !(x isa Real)\n",
-    "            throw(ArgumentError(\"Must be real\"))\n",
-    "        end\n",
-    "        if x < 0\n",
-    "            throw(ArgumentError(\"Negative volume not allowed.\"))\n",
-    "        end\n",
-    "        new{T}(x) # Note that we need an extra {T} here\n",
+    "function setindex!(D::DiagonalMatrix, v, i::Int, j::Int)\n",
+    "    if i == j\n",
+    "        D.diag[i] = v\n",
+    "    else\n",
+    "        throw(ArgumentError(\"cannot set off-diagonal entry ($i, $j)\"))\n",
     "    end\n",
+    "    return v\n",
     "end"
    ]
   },
@@ -508,23 +643,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VolParam(3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VolParam(3)"
+    "D = DiagonalMatrix([1,2,3])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of checking the realness of the input `x` explicitly in the inner constructor, we can impose type constraints in the type and function signatures."
+    "Note how it's automagically pretty printed!"
    ]
   },
   {
@@ -533,14 +659,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "struct Vol{T<:Real} <: Real # the last <: Real tells Julia that a Vol is a subtype of Real, i.e. basically a real number\n",
-    "    value::T\n",
-    "    \n",
-    "    function Vol(x::T) where T<:Real # x can be of any type T<:Real\n",
-    "        x < 0 && throw(ArgumentError(\"Negative volume not allowed.\"))\n",
-    "        new{T}(x)\n",
-    "    end\n",
-    "end"
+    "D * D"
    ]
   },
   {
@@ -549,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(3)"
+    "D + D"
    ]
   },
   {
@@ -558,7 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(3.0)"
+    "D - D"
    ]
   },
   {
@@ -567,23 +686,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(\"1.23\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Vol(-2)"
+    "D / D"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Arithmetic"
+    "Basic arithmetics **just works!** What about broadcasting and more complicated functions?"
    ]
   },
   {
@@ -592,7 +702,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(3) + Vol(4)"
+    "sin.(D)"
    ]
   },
   {
@@ -601,14 +711,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "+(x::Vol, y::Vol) = Vol(x.value + y.value)"
+    "sum([D, D, D])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using LinearAlgebra\n",
+    "eigen(D)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to extend or override functions that already exit, we need to `import` them first."
+    "It is still advantageous to define fast versions that utilize the special diagonal structure:"
    ]
   },
   {
@@ -617,9 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Base: +\n",
-    "\n",
-    "+(x::Vol, y::Vol) = Vol(x.value + y.value)"
+    "@which D + D"
    ]
   },
   {
@@ -628,7 +746,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(3) + Vol(4)"
+    "+(Da::DiagonalMatrix, Db::DiagonalMatrix) = DiagonalMatrix(Da.diag + Db.diag)\n",
+    "*(Da::DiagonalMatrix, Db::DiagonalMatrix) = DiagonalMatrix(Da.diag .* Db.diag)"
    ]
   },
   {
@@ -637,122 +756,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vol(2) + Vol(8.3) # implicit conversion!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "methodswith(Vol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Base: -, *\n",
-    "\n",
-    "-(x::Vol, y::Vol) = Vol(x.value - y.value)\n",
-    "*(x::Vol, y::Vol) = Vol(x.value * y.value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have addition defined for our volume type, some functions already **just work**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum([Vol(3), Vol(4.8), Vol(1)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "M = Vol.(rand(3,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = Vol.(rand(3,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "M + N"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Whenever something doesn't work, we implement the necessary functions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sin(Vol(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Base: AbstractFloat\n",
-    "AbstractFloat(x::Vol{T}) where T = AbstractFloat(x.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sin(Vol(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sqrt(Vol(3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we really wanted to have `Vol{T}` objects behave like real numbers in all operations, we'd have to do a bit more work like specifying [promotion and conversion rules](https://docs.julialang.org/en/latest/manual/conversion-and-promotion/)."
+    "@which D + D"
    ]
   },
   {
@@ -761,14 +765,14 @@
    "source": [
     "An important thing to note is that **user defined types are just as good as built-in types**!\n",
     "\n",
-    "There is nothing special about built-in types. In fact, [they are implemented in the same way](https://github.com/JuliaLang/julia/blob/master/stdlib/LinearAlgebra/src/diagonal.jl#L5)!"
+    "There is nothing special about built-in types. In fact, [they are implemented in precisely the same way](https://github.com/JuliaLang/julia/blob/master/stdlib/LinearAlgebra/src/diagonal.jl#L5)!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us quickly confirm that our volume \"wrapper\" type does not come with any performance overhead by benchmarking it in a simple function."
+    "Let us quickly confirm that our `DiagonalMatrix` type does not come with any performance overhead by benchmarking it in a simple function."
    ]
   },
   {
@@ -793,7 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "operation(x) = x^2 + sqrt(x)"
+    "operation(x) = x + 2*x"
    ]
   },
   {
@@ -897,8 +901,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@btime sqrt(Vol(3));\n",
-    "@btime sqrt(3);"
+    "using LinearAlgebra\n",
+    "x = rand(100);\n",
+    "Djl = Diagonal(x)\n",
+    "D = DiagonalMatrix(x)\n",
+    "@btime operation(Djl);\n",
+    "@btime operation(D);"
    ]
   },
   {
@@ -907,9 +915,10 @@
    "source": [
     "# Core messages of this Notebook\n",
     "\n",
+    "* **User defined types are as good as built-in types.**\n",
     "* There are `mutable struct`s and immutable `struct`s and immutability is not recursive.\n",
-    "* **Contructors** are functions that create objects. In an inner constructor we can use the function `new` to generate objects.\n",
     "* We can easily **extend `Base` functions** for our types to implement arithmetics and such.\n",
+    "* **Subtyping an existing interface** can give lots of functionality for free.\n",
     "* We should always benchmark our code with **BenchmarkTools.jl's @btime and @benchmark**."
    ]
   },
