julia on github

--- a/Day2/4_packages_and_github/2_julia_on_github.ipynb
+++ b/Day2/4_packages_and_github/2_julia_on_github.ipynb
@@ -4,34 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Very Quick Introduction to Git/Github for Julia Users\n",
+    "# Julia on GitHub\n",
     "\n",
     "Julia's package system and Github are very closely intertwined:\n",
     "\n",
     "- Julia's [GeneralRegistry](https://github.com/JuliaRegistries/General) is a Github repository\n",
     "- The packages are Git repositories\n",
     "- Julia packages are normally referred to with the ending “.jl”\n",
-    "- The packages can be found / investigated at Github.com\n",
-    "- Julia's error messages are hyperlinks to the page in Github (very useful!)\n",
+    "- Typically, the packages can be found on GitHub as well\n",
+    "- Julia's error messages are hyperlinks to the page in GitHub (very useful!)\n",
     "\n",
     "Because of this, it's very useful for everyone using Julia to know a little bit about Git/Github."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Git Basics\n",
-    "\n",
-    "- Git is a common Version Control System (VCS)\n",
-    "- A project is a **repository** (repos)\n",
-    "- After one makes changes to a project, they **commit** the changes\n",
-    "- Changes are **pulled** to the main repository hosted online\n",
-    "- To download the code, you **clone** the repository\n",
-    "- Instead of editing the main repository, one edits a **branch**\n",
-    "- To get the changes of the main branch in yours, you **fetch**, **pull**, or **rebase**\n",
-    "- One asks the owner of the repository to add their changes via a **pull request**\n",
-    "- Stable versions are cut to **releases**"
    ]
   },
   {
@@ -127,73 +110,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Live demo: file an issue, make a change + pull request"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to develop a package locally?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "] dev PeriodicTable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Pkg\n",
-    "Pkg.checkout(\"PeriodicTable\", \"dev\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will clone the package's full git repository to `.julia/dev/PeriodicTable`. You are free to modify the source files in every way you want. The package manager will never touch those files again to avoid accidental data loss."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What do those badges mean?\n",
-    "\n",
-    "![GithubBadges](https://github.com/ChrisRackauckas/JupyterSite/raw/master/assets/GithubBadges.PNG \"Badges of a Github Repository\")\n",
-    "\n",
-    "The badges on a Github repository show you the current state of the repo. From left to right:\n",
-    "\n",
-    "- Gitter Badge: Click this to go to a chatroom and directly chat with the developers\n",
-    "- CI Build Badges: This tell you whether the CI tests pass. Click on them to see what versions of Julia the package works for.\n",
-    "- Coverage: This tells you the percentage of the code that the tests cover. If coverage is low, parts of the package may not work even if the CI tests pass.\n",
-    "- Docs Badges: Click on these to go to the package documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Developing Julia Packages\n",
     "- For the visually inclined, here is a video tutorial on basic and advanced github workflow for developing and editing Julia Packages, as well as for setting up Continuous Integration (CI).\n",
     "\n",
-    " [Developing and Editing Julia Packages - A Github Workflow for Julians](https://www.youtube.com/watch?v=QVmU29rCjaA)"
+    " [Developing Julia Packages](https://www.youtube.com/watch?v=QVmU29rCjaA)"
    ]
   }
  ],
