--- a/Day3/2_machine_learning/1_automatic_differentiation.ipynb
+++ b/Day3/2_machine_learning/1_automatic_differentiation.ipynb
@@ -4,14 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Automatic Differentiation"
+    "# Automatic Differentiation (AD)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What AD is not"
+    "We all know how to take derivatives.\n",
+    "```julia\n",
+    "f(x) = 5*x^2 + 3\n",
+    "\n",
+    "df(x) = 10*x\n",
+    "\n",
+    "ddf(x) = 10\n",
+    "```\n",
+    "\n",
+    "The promise of AD is\n",
+    "\n",
+    "```julia\n",
+    "df(x) = derivative(f, x)\n",
+    "\n",
+    "ddf(x) = derivative(df, x)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What AD is not"
    ]
   },
   {
@@ -36,10 +58,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(The example and the figures below are taken from [this book](https://mitpress.ublish.com/book/algorithms-for-optimization).)\n",
-    "\n",
     "Key to AD is the application of the chain rule\n",
-    "$$\\dfrac{d}{dx} f(g(x) = \\dfrac{df}{dg} \\dfrac{dg}{dx}$$\n",
+    "$$\\dfrac{d}{dx} f(g(x)) = \\dfrac{df}{dg} \\dfrac{dg}{dx}$$\n",
     "\n",
     "Consider the function $f(a,b) = \\ln(ab + \\max(a,2))$."
    ]
@@ -77,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dividing the function into the elementary steps, it corresponds to the following *computational graph*:"
+    "Dividing the function into the elementary steps, it corresponds to the following \"*computational graph*\":"
    ]
   },
   {
@@ -114,66 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\dfrac{df}{dx} = \\dfrac{df}{dc_4} \\dfrac{dc_4}{dx} = \\dfrac{df}{dc_4} \\left( \\dfrac{dc_4}{dc_3} \\dfrac{dc_3}{dx}  \\right) = \\dfrac{df}{dc_4} \\left( \\dfrac{dc_4}{dc_3} \\left( \\dfrac{dc_3}{dc_2} \\dfrac{dc_2}{dx} + \\dfrac{dc_3}{dc_1} \\dfrac{dc_1}{dx}\\right)  \\right)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Forward mode AD will automatically differentiate the function using a forward pass through the computational graph."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# D for \"dual number\", invented by Clifford in 1873.\n",
-    "struct D <: Number\n",
-    "    x::Float64 # value\n",
-    "    ϵ::Float64 # derivative\n",
-    "end\n",
-    "\n",
-    "import Base: +, *, /, -, sin, log, convert, promote_rule\n",
-    "\n",
-    "a::D + b::D = D(a.x + b.x, a.ϵ + b.ϵ) # sum rule\n",
-    "a::D - b::D = D(a.x - b.x, a.ϵ - b.ϵ)\n",
-    "a::D * b::D = D(a.x * b.x, a.x * b.ϵ + a.ϵ * b.x) # product rule\n",
-    "a::D / b::D = D(a.x / b.x, (b.x * a.ϵ - a.x * b.ϵ)/b.x^2) # quotient rule\n",
-    "sin(a::D) = D(sin(a.x), cos(a.x) * a.ϵ)\n",
-    "log(a::D) = D(log(a.x), 1/a.x * a.ϵ)\n",
-    "\n",
-    "Base.convert(::Type{D}, x::Real) = D(x, zero(x))\n",
-    "Base.promote_rule(::Type{D}, ::Type{<:Number}) = D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f(D(a,1), b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f(D(a,1), b).ϵ ≈ f_derivative(a,b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**How does this work?!**\n",
-    "\n",
-    "Note that we can take derivatives of every node in the graph (elementary operation) to obtain the derivative:"
+    "$\\dfrac{\\partial f}{\\partial a} = \\dfrac{\\partial f}{\\partial c_4} \\dfrac{\\partial c_4}{\\partial a} = \\dfrac{\\partial f}{\\partial c_4} \\left( \\dfrac{\\partial c_4}{\\partial c_3} \\dfrac{\\partial c_3}{\\partial a}  \\right) = \\dfrac{\\partial f}{\\partial c_4} \\left( \\dfrac{\\partial c_4}{\\partial c_3} \\left( \\dfrac{\\partial c_3}{\\partial c_2} \\dfrac{\\partial c_2}{\\partial a} + \\dfrac{\\partial c_3}{\\partial c_1} \\dfrac{\\partial c_1}{\\partial a}\\right)  \\right)$"
    ]
   },
   {
@@ -205,14 +166,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_graph_derivative(a,b)"
+    "f_graph_derivative(a,b)[2] == f_derivative(a,b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The trick of our dual number based forward mode AD is to let the computer do this rewrite for you!**\n",
+    "**How can we automate this?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# D for \"dual number\", invented by Clifford in 1873.\n",
+    "struct D <: Number\n",
+    "    x::Float64 # value\n",
+    "    ϵ::Float64 # derivative\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Base: +, *, /, -, sin, log, convert, promote_rule\n",
+    "\n",
+    "a::D + b::D = D(a.x + b.x, a.ϵ + b.ϵ) # sum rule\n",
+    "a::D - b::D = D(a.x - b.x, a.ϵ - b.ϵ)\n",
+    "a::D * b::D = D(a.x * b.x, a.x * b.ϵ + a.ϵ * b.x) # product rule\n",
+    "a::D / b::D = D(a.x / b.x, (b.x * a.ϵ - a.x * b.ϵ)/b.x^2) # quotient rule\n",
+    "sin(a::D) = D(sin(a.x), cos(a.x) * a.ϵ)\n",
+    "log(a::D) = D(log(a.x), 1/a.x * a.ϵ)\n",
+    "\n",
+    "Base.convert(::Type{D}, x::Real) = D(x, zero(x))\n",
+    "Base.promote_rule(::Type{D}, ::Type{<:Number}) = D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(D(a,1), b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Boom! That was easy!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(D(a,1), b).ϵ ≈ f_derivative(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How does this work?!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The trick of forward mode AD is to make the computer do the rewrite `f -> f_graph_derivative` for you.\n",
     "\n",
     "Importantly, the compiler sees the entire \"rewritten\" code and can therefore apply all kinds of optimizations!"
    ]
@@ -267,15 +299,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "derivative(x->f(x,b), a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "derivative(x->3*x^2+4x+5, 2)"
    ]
   },
@@ -311,31 +334,6 @@
    "outputs": [],
    "source": [
     "df(1.23)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Even recursion works"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pow(x, n) = n <= 0 ? 1 : x*pow(x, n-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "derivative(x -> pow(x,3), 2)"
    ]
   },
   {
@@ -430,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### It just works and is efficient"
+    "It just works and is efficient."
    ]
   },
   {
@@ -442,6 +440,31 @@
    "outputs": [],
    "source": [
     "@code_native debuginfo=:none Babylonian(D(5, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursion? Works as well..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pow(x, n) = n <= 0 ? 1 : x*pow(x, n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derivative(x -> pow(x,3), 2)"
    ]
   },
   {
@@ -546,10 +569,10 @@
    "metadata": {},
    "source": [
     "Forward mode:\n",
-    "$\\dfrac{df}{dx} = \\dfrac{df}{dc_4} \\dfrac{dc_4}{dx} = \\dfrac{df}{dc_4} \\left( \\dfrac{dc_4}{dc_3} \\dfrac{dc_3}{dx}  \\right) = \\dfrac{df}{dc_4} \\left( \\dfrac{dc_4}{dc_3} \\left( \\dfrac{dc_3}{dc_2} \\dfrac{dc_2}{dx} + \\dfrac{dc_3}{dc_1} \\dfrac{dc_1}{dx}\\right)  \\right)$\n",
+    "$\\dfrac{\\partial f}{\\partial x} = \\dfrac{\\partial f}{\\partial c_4} \\dfrac{\\partial c_4}{\\partial x} = \\dfrac{\\partial f}{\\partial c_4} \\left( \\dfrac{\\partial c_4}{\\partial c_3} \\dfrac{\\partial c_3}{\\partial x}  \\right) = \\dfrac{\\partial f}{\\partial c_4} \\left( \\dfrac{\\partial c_4}{\\partial c_3} \\left( \\dfrac{\\partial c_3}{\\partial c_2} \\dfrac{\\partial c_2}{\\partial x} + \\dfrac{\\partial c_3}{\\partial c_1} \\dfrac{\\partial c_1}{\\partial x}\\right)  \\right)$\n",
     "\n",
     "Reverse mode:\n",
-    "$\\dfrac{df}{dx} = \\dfrac{df}{dc_4} \\dfrac{dc_4}{dx} = \\left( \\dfrac{df}{dc_3}\\dfrac{dc_3}{dc_4}   \\right) \\dfrac{dc_4}{dx} = \\left( \\left( \\dfrac{df}{dc_2} \\dfrac{dc_2}{dc_3} + \\dfrac{df}{dc_1} \\dfrac{dc_1}{dc_3} \\right) \\dfrac{dc_3}{dc_4} \\right) \\dfrac{dc_4}{dx}$"
+    "$\\dfrac{\\partial f}{\\partial x} = \\dfrac{\\partial f}{\\partial c_4} \\dfrac{\\partial c_4}{\\partial x} = \\left( \\dfrac{\\partial f}{\\partial c_3}\\dfrac{\\partial c_3}{\\partial c_4}   \\right) \\dfrac{\\partial c_4}{\\partial x} = \\left( \\left( \\dfrac{\\partial f}{\\partial c_2} \\dfrac{\\partial c_2}{\\partial c_3} + \\dfrac{\\partial f}{\\partial c_1} \\dfrac{\\partial c_1}{\\partial c_3} \\right) \\dfrac{\\partial c_3}{\\partial c_4} \\right) \\dfrac{\\partial c_4}{\\partial x}$"
    ]
   },
   {
@@ -569,6 +592,13 @@
     "*Rule of thumb:*\n",
     "\n",
     "Forward mode is good for $\\mathbb{R} \\rightarrow \\mathbb{R}^n$ while reverse mode is good for $\\mathbb{R}^n \\rightarrow \\mathbb{R}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An efficient source-to-source reverse mode AD is implemented in [Zygote.jl](https://github.com/FluxML/Zygote.jl), the AD underlying [Flux.jl](https://fluxml.ai/) (since version 0.10)."
    ]
   },
   {
@@ -595,7 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f'(10)"
+    "gradient(f, 5)"
    ]
   },
   {
@@ -604,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradient(f, 5)"
+    "@code_llvm debuginfo=:none gradient(f,5)"
    ]
   },
   {
