--- a/Day3/2_machine_learning/1_automatic_differentiation.ipynb
+++ b/Day3/2_machine_learning/1_automatic_differentiation.ipynb
@@ -61,7 +61,7 @@
     "Key to AD is the application of the chain rule\n",
     "$$\\dfrac{d}{dx} f(g(x)) = \\dfrac{df}{dg} \\dfrac{dg}{dx}$$\n",
     "\n",
-    "Consider the function $f(a,b) = \\ln(ab + \\max(a,2))$."
+    "Consider the function $f(a,b) = \\ln(ab + \\sin(a))$."
    ]
   },
   {
@@ -98,6 +98,13 @@
    "metadata": {},
    "source": [
     "Dividing the function into the elementary steps, it corresponds to the following \"*computational graph*\":"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"comp_graph.svg\" width=300px>"
    ]
   },
   {
